2021-08-27  Alex Christensen  <achristensen@webkit.org>

        Add UIEventAttribution SPI that uses PrivateClickMeasurementAttributionEphemeral::Yes
        https://bugs.webkit.org/show_bug.cgi?id=229623

        Reviewed by John Wilander.

        * TestWebKitAPI/Tests/WebKitCocoa/EventAttribution.mm:
        (TestWebKitAPI::TEST):

2021-08-27  Yijia Huang  <yijia_huang@apple.com>

        Add a new email address to contributors.json
        https://bugs.webkit.org/show_bug.cgi?id=229628

        Unreviewed.

        * Scripts/webkitpy/common/config/contributors.json:

2021-08-27  Alex Christensen  <achristensen@webkit.org>

        Separate PrivateClickMeasurement database from ResourceLoadStatistics database and add SPI to set its location
        https://bugs.webkit.org/show_bug.cgi?id=229527

        Reviewed by Kate Cheney.

        * TestWebKitAPI/Tests/WebKitCocoa/EventAttribution.mm:
        (TestWebKitAPI::runBasicEventAttributionTest):
        (TestWebKitAPI::TEST):
        * TestWebKitAPI/Tests/WebKitCocoa/PrivateClickMeasurement.mm:
        (TEST):

2021-08-27  Chris Dumez  <cdumez@apple.com>

        Extend API test coverage to make sure didFailProvisionalLoad is not called upon COOP process swap
        https://bugs.webkit.org/show_bug.cgi?id=229610

        Reviewed by Alex Christensen.

        * TestWebKitAPI/Tests/WebKitCocoa/ProcessSwapOnNavigation.mm:

2021-08-27  Chris Dumez  <cdumez@apple.com>

        REGRESSION (r281516): imported/w3c/web-platform-tests/IndexedDB/serialize-sharedarraybuffer-throws.https.html is failing
        https://bugs.webkit.org/show_bug.cgi?id=229501
        <rdar://problem/82346152>

        Reviewed by Darin Adler.

        In case of a COOP process-swap, the old process gets a didFailProvisionalLoadWithErrorForFrame delegate call. We want to ignore
        this call in WKTR's injected bundle since it causes the test to dump its output too eagerly, before the test has had a chance